<resources>
    <string name="app_name">PoemApplication</string>
    <string name="detalPoem">
        เรือแล่นคล้อยไปจนพบพรรณไม้ต่างๆ อยู่ริมท่าน้ำ มีกลิ่นหอมสดชื่น ผลิดอกออกช่อผสมกัน กลิ่นหอมน่าชื่นเชยเหมือนกลิ่นเนื้อของน้อง
    </string>
    <string name="detalPoem2">
        กระบวนเรือเคลื่อนมาพบต้นไม้กลากหลายชนิดขึ้นริมน้ำ ผลิดอกออกช่อผสมกัน มีกลิ่นหอมสดชื่นเหมือนกลิ่นกายน้อง
        พี่ชมดอกนางแย้มเป็นพวง แย้มกลีบชดช้อยเห็นเกสร ทำให้นึกถึงน้องยามแย้มปากยิ้มอย่างงดงาม
        ดอกจำปาดกแน่นต้น ต่างคลี่กลีบสีเหลืองกระจ่างสวย คิดถึงผิวน้องที่เป็นสีเหลืองสวยกว่าสีดอกจำปา
        ดอกประยงค์เป็นพวงห้อยระย้า เปรียบเหมือนอุบะที่น้องร้อยแขวนประดับให้พี่ดู
        ดอกพุดจีบมีกลีบ ทั้งดอกพิกุลขึ้นแซมดอกสุกรมนั้น ต่างโชยกลิ่นหอมระรวยมาตามลม หอมเหมือนกลิ่นของน้องที่พี่ติดใจ

    </string>
    <string name="boat1type1_1">
        ประวัติ
        เรือพระที่นั่งนารายณ์ทรงสุบรรณ รัชกาลที่ 9 เป็นเรือพระที่นั่งกิ่งประเภทเรือรูปสัตว์ หนึ่งในเรือพระราชพิธี
        ในกระบวนพยุหยาตราชลมารค จัดสร้างขึ้นเพื่อเฉลิมฉลองในวโรกาส พระราชพิธีกาญจนาภิเษก แห่งพระบาทสมเด็จ
        พระปรมินทรมหาภูมิพลอดุลยเดช ในวันที่ 9 มิถุนายน พ.ศ. 2539 โดย กองทัพเรือ ร่วมกับ กรมศิลปากร
        ได้นำ โขนเรือพระที่นั่งนารายณ์ทรงสุบรรณ ที่สร้างขึ้น ในสมัยรัชกาลที่ 3 และ รัชกาลที่ 4 มาเป็นต้นแบบ
        โดยกองทัพเรือ สร้างในส่วนที่เป็นโครงสร้างเรือ
        พาย และคัดฉาก ส่วนกรมศิลปากร ดำเนินการในงานที่เกี่ยวกับ ศิลปกรรมของเรือทั้งหมด แล้วขนานนามว่า “เรือนารายณ์ทรงสุบรรณ”
        ต่อมาเรือได้เสื่อมสภาพลงคงเหลือแต่โขนเรือเก็บรักษาไว้ในพิพิธภัณฑ์สถานแห่งชาติ
    </string>
    <string name="boat1type1_2">
        ขั้นตอนการจัดสร้างเรือพระที่นั่งนารายณ์ทรงสุบรรณ รัชกาลที่ 9
        แบบเรือได้คงขนาดและลักษณะของลวดลายแกะสลักทั้งหลายไว้ตามแบบเรือพระที่นั่งนารายณ์ทรงสุบรรณลำเก่า แต่ได้ปรับปรุงให้โขนเรือมีความสูงเพิ่มขึ้น
        และส่วนที่เป็นรูปพระครุฑพ่าห์ก็ออกแบบให้มีความงดงามยิ่งขึ้น พร้อมทั้งได้ขยายพื้นที่ของลำเรือให้กว้างขวางขึ้น โดยเฉพาะส่วนที่ทอดบัลลังก์กัญญาและประดับเครื่องสูงทั้งหลาย
        เริ่มดำเนินการสร้างตั้งแต่ วันที่ 1 มิถุนายน พ.ศ. 2537 กรมอู่ทหารเรือรับเป็นผู้จัดสร้างตัวเรือ พาย และคัดฉาก ส่วนกรมศิลปากรเป็นผู้ดูแลการออกแบบ
        แกะสลักลวดลายตลอดจนการลงรักปิดทองประดับกระจก
    </string>
    <string name="boat1type1_3">
        ขนาดของเรือ มีความยาว 44.3 เมตร ความยาวแนวน้ำหนักบรรทุกเต็มที่ 34.6 เมตร ความกว้าง 3.2 เมตร ความลึก 1.1 เมตร
            กินน้ำลึก 0.4 เมตร ระวางน้ำบรรทุกขับเต็มที่ 20 ตัน มีฝีพาย 50 นาย สิ้นค่าใช้จ่ายประมาณ 11.9 ล้านบาท
    </string>
    <string name="boat2type1_1">
        เรือพระที่นั่งอเนกชาติภุชงค์ เป็นเรือพระที่นั่งรอง ในกระบวนพยุหยาตราชลมารค ลักษณะเด่นคือมีโขนเรือเชิดเรียว ไม่ได้สร้างเป็นรูปสัตว์ในตำนาน แต่จำหลักและปิดทองเป็นรูปพญานาค
            จำนวนมาก จึงได้ชื่อว่า อเนกชาติภุชงค์ (อเนก หมายถึง จำนวนมาก, ชาติภุชงค์ หมายถึง พญานาค)เรือพระที่นั่งอเนกชาติภุชงค์
            สร้างขึ้นใหม่ในรัชสมัยพระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว รัชกาลที่ 5 ก่อนหน้านี้ไม่ปรากฏชื่อเรือพระที่นั่งลำนี้ จัดเป็นเรือพระที่นั่งศรี ในลำดับชั้นรอง
            ใช้ในการเสด็จพระราชดำเนินลำลอง ภายหลังนำเข้ากระบวนพยุหยาตราชลมารค เรียกว่า เรือพระที่นั่งรอง นับเป็นเรือพระที่นั่งลำเดียวที่สร้างขึ้นในรัชกาลที่ 5
            ปัจจุบันเก็บรักษาที่ พิพิธภัณฑสถานแห่งชาติ เรือพระราชพิธี ริมคลองบางกอกน้อย ใกล้สะพานอรุณอมรินทร์
    </string>
    <string name="boat2type1_2">
        โขนเรือจำหลักปิดทองเป็นรูปพญานาคเล็ก ๆ จำนวนมาก ลำเรือภายนอกทาสีชมพู ท้องเรือภายในทาสีแดง ยาว 45.50 เมตร กว้าง 3.15 เมตร ลึก 1.11 เมตร
            กินน้ำลึก .46 เมตร กำลัง 3.50 เมตร ใช้ฝีพาย 61 คน นายท้าย 2 คน นายเรือ 2 คน ถือธงท้าย 1 คน พลสัญญาณ 1 คน คนเห่ 1 คน
    </string>
    <string name="boat3type1_1">
        เรืออสุรวายุภักษ์ เป็นเรือรูปสัตว์ในประเภทเรือเหล่าแสนยากร เป็นหนึ่งในเรือพระราชพิธีกระบวนพยุหยาตราชลมารค เรืออสุรวายุภักษ์ โขนเรือเป็นรูปครึ่งยักษ์ครึ่งนก มีส่วนบนเป็นยักษ์
            ส่วนล่างเป็นนกองค์เป็นสีม่วง ลักษณะและขนาดของเรือใกล้เคียงกับเรืออสุรปักษี การแต่งกายของผู้ประจำเรือ นายลำนุ่งปูม สวมเสื้อเข้มขาบ โพกขลิบทอง
            ปัจจุบันเก็บรักษาที่โรงเรือท่าวาสุกรี
    </string>
    <string name="boat3type1_2">
        ขนาดกว้าง 2.03 เมตร ยาว 31 เมตร ลึก 0.62 เมตร ฝีพาย 40 นาย เจ้าหน้าที่ประจำเรือ 17 นาย
    </string>
    <string name="boat4type1_1">
            เรือกระบี่ปราบเมืองมาร เป็นเรือพระราชพิธี ชนิดหนึ่งหน้ามีลักษณะเหมือนรูปโขน ลำเดิมเป็นเรือพื้นดำ ยาว 13 วา 2 ศอก 1 คืบ กว้าง 4 ศอก ลึก 1 ศอก กำลัง 5
            ศอก 4 นิ้ว ลำเดิมถูกระเบิดเสียหาย กรมศิลปากรเก็บหัวเรือท้ายเรือไว้ ในพิพิธภัณฑ์เมื่อปี พ.ศ. 2591ส่วนลำปัจจุบันสร้างใหม่ เมื่อ พ.ศ. 2510 โดยใช้หัวเรือเดิมนำมาซ่อมแซม
            ช่างแกะสลักลวดลายทำงานประมาณ 12 เดือน ช่างรักทำงานประมาณ 4 เดือน ช่างเขียนทำงานประมาณ 6 เดือน ช่างปิดทองและประดับกระจกทำงานประมาณ 4 เดือน น้ำหนัก 5.62 ตัน
            พ.ศ. 2512 จัดทำเครื่องตกแต่งเรือใหม่ตั้งแต่ 29 กันยายน พ.ศ. 2512 จนถึง 25 กุมภาพันธ์
            พ.ศ. 2513 โดยบริษัท สำนักงานเกษรดอก ประดู่ จำกัด เป็นผู้ทำ
    </string>
    <string name="boat4type1_2">
            พ.ศ. 2525 ซ่อมใหญ่เปลี่ยนไม้ตัวเรือที่ผุหรือชำรุดบางส่วน ลงรักปิดทอง ทาสีตัวเรือใหม่และอื่น ๆ เพื่อให้ทันใช้ในงานสมโภชกรุงรัตนโกสินทร์ 200 ปี
            ในวันที่ 5 เมษายน พ.ศ. 2525 เริ่มซ่อมทำตั้งแต่ 4 กันยายน
            พ.ศ. 2524 จนถึงวันที่ 2 มีนาคม พ.ศ. 2525 โดยมี บริษัท สหายสันต์ จำกัด เป็นผู้รับเหมาซ่อมทำ การแต่งกายของผู้ประจำเรือ นายลำนุ่งปูม สวมเสื้อเข้มขาบ โพกขลิบทอง
    </string>
    <string name="boat4_type1_3">
            ยาว 26.80 เมตร กว้าง 2.10 เมตร ลึก 0.51 เมตร กินน้ำลึก 0.25 เมตร ฝีพาย 36 นาย นายท้าย 2 นาย หัวเรือมีช่องสำ หรับติดตั้งปืนใหญ่ 1
            กระบอก ขนาด 65 มม. เหนือช่องปืนและเป็นรูปขุนกระบี่สีขาว
    </string>
    <string name="boat5Type1_1">
        เรือเสือคำรณสินธุ์ (2018) เรือเสือคำรณสินธุ์ เป็นเรือที่ดัดแปลงมาจากเรือรบ (เรือที่ใช้ในสงคราม) เป็นเรือนำกระบวนเรือพยุหยาตราชลมารค
            ในสมัยโบราณเรียกเรือลักษณะนี้ว่า เรือพิฆาตเรือวาดและลงสีรูปเสือไว้ที่หัวเรือซึ่งมีช่องไว้สำหรับใส่ปืนใหญ่ ถือเป็นเรือพิทักษ์
            กระบวนเรือพยุหยาตราชลมารคด้วย จึงต้องให้อำมาตย์ผู้ใหญ่ฝ่ายทหารเป็นผู้นั่งประจำในคฤห์ (เก๋ง) ของเรือในรัชสมัยสมเด็จพระนารายณ์มหาราช (พุทธศักราช 2199-2231)
	        ชื่อเรือเสือคำรณสินธุ์ ปรากฏชื่อในลิลิตกระบวนแห่พระกฐินพยุหยาตราทั้งสถลมารคและทางชลมารคในพุทธศักราช 2387
        แต่ไม่ทราบว่าสร้างขึ้นครั้งแรกเมื่อใด เรือนี้ซ่อมแซมขึ้นใหม่ในปีพุทธศักราช 2534
    </string>
    <string name="boat5Type1_2">
            หัวเรือเขียนสีเป็นรูปสัตว์ ลำเรือภายนอกทาสีเหมือนลายเสือไม่ลงรักปิดทอง ภายในท้องเรือทาสีแดง ยาว 22.27 เมตร
            กว้าง 1.78 เมตร ลึก 0.57 เมตร กำลัง 2.48 เมตร ฝีพาย 26 คน นายท้าย 1 คน นายเรือ 2 คน
            นั่งคฤห์กัญญา 3 คน พลสัญญาณ 1 คน มีปืนบรรจุปากกระบอก 1 กระบอก
    </string>
    <string name="boat1type2_1">
        เรือสมรรถไชย เรือพระที่นั่งนี้มีมานานแล้วแต่ครั้งกรุงศรีอยุธยาปรากฏในตำราริ้วกระบวนแห่พยุหยาตราชลมารคสมเด็จพระนารายณ์มหาราช
            เป็นเรือกิ่งพื้นดำและมีปรากฏชื่อในโคลงพระราชพิธีทวาทศมาสในรัชกาลที่ ๔แห่งกรุงรัตนโกสินทร์ด้วย เป็นเรือพระที่นั่งสำหรับทรงเปลื้องเครื่อง
            เพราะมีการตั้งบัลลังก์บุษบก อัญเชิญพระชฎามหากฐินนำหน้าเรือพระที่นั่งลำทรง ตั้งเครื่องสูงด้านหน้าฉัตร ๗ ชั้น ๑ องค์  ฉัตร ๕ ชั้น ๒ องค์
            ด้านหลังบุษบกตั้งฉัตร ๗ ชั้น ๑ องค์  ฉัตร ๕ ชั้น ๒ องค์ ม่านบุษบกเป็นผ้าตาด  มีตำรวจประจำเรือ ๖ นาย  นักสราชนั่งเชิญธง ด้านหน้าและด้านหลัง ด้านละ ๑์
    </string>
    <string name="boat2type2_1">
         เรือพระที่นั่งสุวรรณหงส์มีชื่อกล่าวถึงเป็นครั้งแรกในสมัยกรุงศรีอยุธยาต้นรัชกาลสมเด็จพระมหาจักรพรรดิราวปี พ.ศ. 2091 ในสมัยกรุงศรีอยุธยาเรียกว่า
            "สุวรรณหงส์" ดังทราบได้จากบทเห่เรือของเจ้าฟ้าธรรมธิเบศร์ฯที่ว่า ในหนังสือตำนานเรือรบไทยพระนิพนธ์สมเด็จกรมพระยาดำรงราชานุภาพได้ทรงกล่าวไว้ว่า
            เรือศรีสุพรรณหงส์สร้างในสมัยกรุงรัตนโกสินทร์ในสมัยพระบาทสมเด็จพระพุทธยอดฟ้าจุฬาโลกมหาราช ตามจดหมายเหตุเมื่อปี พ.ศ. 2370
            มีหมายรับสั่งให้จัด "เรือพระที่นั่งศรีสุพรรณหงส์" เป็นเรือทรงพระบรมธาตุที่ได้มาจากเวียงจันทน์ ในจดหมายเหตุในรัชกาลที่ 3 และรัชกาลที่ 4
            เรียกชื่อเรือนี้ว่า "เรือศรีสุพรรณหงส์" เรือศรีสุพรรณหงส์ได้ชำรุดทรุดโทรมเรื่อยมา และได้รับการซ่อมแซมมาหลายครั้ง
    </string>
    <string name="boat2type2_2">
            เรือพระที่นั่งสุพรรณหงส์ลำปัจจุบัน เป็นเรือพระที่นั่งที่พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัวโปรดเกล้าฯให้ต่อขึ้นใหม่เพราะเรือพระที่นั่งศรีสุพรรณหงส์
            ลำเดิมผุพังเกินที่จะซ่อมได้ แต่มาเสร็จสมบูรณ์ในสมัยพระบาทสมเด็จพระมงกุฎเกล้าเจ้าอยู่หัว และเปลี่ยนชื่อเป็นเรือพระที่นั่งสุพรรณหงส์
            มีพลตรีพระยาราชสงคราม (กร หงสกุล) เป็นนายช่าง ประกอบพิธีลงน้ำ เมื่อวันที่ 13 พฤศจิกายน พ.ศ. 2454
    </string>
    <string name="boat2type2_3">
             นาวาสถาปนิกของเรือสุพรรณหงส์คือ พลเรือตรีพระยาราชสงคราม (กร หงสกุล) จัดเป็นเรือพระที่นั่งกิ่ง มักใช้เป็นเรือพระที่นั่งทรงของพระเจ้าอยู่หัว
            โขนเรือเป็นรูปหงส์ ลงรักปิดทองประดับกระจก ภายนอกทาสีดำ ท้องเรือภายในทาสีแดง ยาว 44.9 เมตร กว้าง 3.14 เมตร
            ลึก 0.9 เมตร กินน้ำลึก 0.41 เมตร กำลัง 3.5 เมตร (พายครั้งหนึ่งแล่นไปได้ไกล 3.5 เมตร) หนัก 15.1 ตัน พายทอง
    </string>
    <string name="boat3type2_1">
        จะเห็นว่าเรือสมรรถไชยและเรือไกรสรมุขเป็นเรือเสี่ยงทายตามกล่าว แต่ความจริงหาได้เป็นเช่นนั้นไม่ เรือสมรรถไชยเป็นเรือต้น
            ซึ่งเป็นเรือของพระเจ้าแผ่นดิน เรือไกรสรมุขเป็นเรือของพระอัครมเหสี ฉะนั้นการเสี่ยงทายเรือไกรสรมุขต้องชนะเสมอไป
            เพราะเป็นการปลอบขวัญประชาชน แสดงถึงความเอาอกเอาใจต่อพระมเหสีด้วย เห็นได้ว่า ประเพณีการแข่งเรือ
            ตามประเพณีหลวงสมัยโบราณที่ได้กระทำกันมาตั้งแต่สมัยกรุงศรีอยุธยา พอมาถึงกรุงรัตนโกสินทร์ประเพณีนี้ไม่มีการปฏิบัติกัน
            แต่ก็ไม่ถึงกับหายสาบสูญไป มีการแข่งขันกันบ้าง สำหรับการแข่งเรือสมัยรัตนโกสินทร์ที่ต้องมีการจารึกไว้ในประวัติศาสตร์
    </string>
    <string name="boat3type2_2">
        คือ การแข่งเรือวังหลวง กับวังหน้า แต่การแข่งขันครั้งนั้นไม่บริสุทธิ์ ถือว่ามีเล่ห์เหลี่ยม เกือบทำให้เกิดเรื่องยุ่งยาก
            เรื่องมีอยู่ว่า ในแผ่นดินสมเด็จพระพุทธยอดฟ้าจุฬาโลก ได้มีการแข่งเรือระหว่างวังหลวงกับวังหน้าขึ้น ครั้งหนึ่งเรือวังหลวงชื่อทองปลิว
            เรือวังหน้าชื่อ มังกร เมื่อจับคู่เทียบฝีพายกันแล้วเห็นว่าทัดเทียมกันจะแข่งขันกันได้ก็ตกลง แต่ก่อนที่จะมีการลงมือแข่งขันได้ม
            ข้าราชการหลวงผู้หนึ่งสืบทราบว่า ทางวังหน้าเล่นไม่ซื่อ จึงได้นำความขึ้นกราบบังคมทูลว่ากรมพระราชวังบวรฯ
            จัดฝีพายที่แข็งแรงซ่อนไว้ เวลาแข่งจะเอาพวกนี้ออกพายแข่ง เมื่อได้ทรงทราบจึงมีพระดำรัสว่า  เล่นอย่างนี้จะเล่นด้วยอย่างไร จึงให้เลิกการแข่งเรือคราวนั้นเสีย”
    </string>
    <string name="boat5type2_1">
        เรือครุฑเหินเห็จ ลำเดิมนั้นสร้างขึ้นในรัชสมัยของพระบาทสมเด็จพระพุทธยอดฟ้าจุฬาโลกมหาราช รัชกาลที่ 1 เป็นเรือรูปสัตว์เทพนิยาย เป็นเรือพื้นดำ
            ยาวประมาณ 27 เมตร กว้าง 1.90 เมตร แต่ได้ถูกระเบิดในช่วงสงครามโลกครั้งที่ 2 ได้รับความเสียหาย
            ทางกรมศิลปากรจึงได้ตัดส่วนหัวเรือและท้ายเรือเก็บไว้ในพิพิธภัณฑ์ต่อมาในปีพ.ศ.2505 เมื่อวันที่ 21 เมษายน ได้รับการบูรณะสร้าง
            ตัวเรือขึ้นมาใหม่โดยใช้ส่วนหัวและท้ายเรือเดิมนำมาประกอบเข้าด้วยกัน ตัวเรือลำใหม่นี้มีความยาว 27.50 เมตร กว้าง 1.59 เมตร
            และลึก 0.59 เมตร ส่วนที่กินน้ำลึก 32 เซนติเมตร ใช้ฝีพาย 38 นาย และนายท้าย 2 นายในปีพ.ศ.2511 ได้ดำเนินการบูรณะ
    </string>
    <string name="boat5type2_2">
        ซ่อมแซมลำเรือใหม่ โดยใช้ช่างแกะสลักลวดลายใช้เวลาในการทำงานประมาณ 18 เดือน ช่างรักทำงาน 6 เดือน ช่างเขียนลายรดน้ำทำงานประมาณ
            6 เดือน ช่างปิดทองและประดับกระจกทำงานประมาณ 4 เดือนระหว่างวันที่ 15 มีนาคม - 10 กันยายน พ.ศ.2514
            สำนักงานเกษรดอกประดู่ ได้รับเหมาดำเนินการทำเครื่องตกแต่งเรือใหม่ และเมื่อปีพ.ศ.2524 ได้ดำเนินการซ่อมครั้งใหญ่
            เพื่อใช้ในงานสมโภชกรุงรัตนโกสินทร์ 200 ปี ที่จะจัดขึ้นในวันที่ 5 เมษายน พ.ศ.2525 โดยเริ่มดำเนินการตั้งแต่วันที่
            4 กันยายน พ.ศ.2524 ถึงวันที่ 2 มีนาคม พ.ศ.2525 โดยเปลี่ยนไม้ตัวเรือที่ผุพัง ลงรักปิดทองแล้วทาสีใหม่
            และส่วนอื่น ๆ ตามความเหมาะสม ดำเนินการโดยบริษัทสหายสันต์ จำกัด
    </string>
    <string name="boat5type2_3">
        การบูรณะสร้างตัวเรือขึ้นมาใหม่โดยใช้ส่วนหัวและท้ายเรือเดิมนำมาประกอบเข้าด้วยกัน
            ขนาด : ความยาว 27.50 เมตร กว้าง 1.59 เมตร และลึก 0.59 เมตร ส่วนที่กินน้ำลึก 32 เซนติเมตร
            เจ้าพนักงานประจำเรือ : ใช้ฝีพาย 38 นาย และนายท้าย 2 นาย
    </string>
</resources>